# vue-collector

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vue_collector/: __init__.py  cli.py  collector.py  script.py  style.py  template.py  util.py
src/vue_collector/format/: __init__.py  script.py  style.py  template.py  vue.py
tests/: test_assets.py  test_collector.py  test_errors.py  test_format.py  test_script.py  test_style.py  test_template.py  test_util.py
tests/fixtures/: Card.vue  Counter.vue  ItemList.vue  Static.vue
