[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vue-collector"
version = "0.1.0"
description = "Collect Vue single-file components into a single HTML file for browser use"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Andy Smith" },
]
keywords = ["vue", "vue.js", "single-file-component", "html", "less", "css", "frontend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "lesscpy==0.15.1",
]

[project.urls]
Homepage = "https://github.com/uandysmith/vue-collector"
Repository = "https://github.com/uandysmith/vue-collector"
Issues = "https://github.com/uandysmith/vue-collector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vue_collector"]

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

[tool.ruff.lint.isort]
known-first-party = ["vue_collector"]
